2009-03-08 arne

	* fix nervous tooltips

2009-02-21 arne

	* move methods only useable with VST in CFrame into the ENABLE_VST_EXTENSION_IN_VSTGUI macro
	* can be compiled under Mac OS X 10.4 again

2009-01-02 arne

	* fix a possible memory leak when compiling Cocoa support in
	* removed some duplicated code
	* removed some unused functions in vstgui.cpp (CColor2RGBColor, RGBColor2CColor)
	* fix bugs in UTF8StringHelper
	* Windows implementation calls frame->onMouseExited() now when the mouse leaves the window
	* dropping text on Windows will use unicode text if VSTGUI_USES_UTF8 is enabled
	* CNewFileSelector implementation for Windows Vista, older Windows versions still needs implementation
	* implementation for missing COptionMenu features on Windows (Icons & prefix numbers)

2008-12-07 arne

	* fixes to cocoa tooltip implementation
	* the platform implementation should call frame->onMouseExited() when the mouse leaves the platform view/window
	* added onMouseDown(..) to IMouseObserver
	* fix warnings when building with gcc4.2

2008-12-06 arne

	* cocoa tooltip implementation
	* added onMouseMoved(..) to IMouseObserver
	* small usability improvements to the tooltip implementation
	* added CView::removeAttribute(..)

2008-10-23 arne

	* fix crash in CMenuItem::setTitle and CMenuItem::setKey
	* fix string width calculation with CoreText
	* make mac compile again if the new fileselector is turned off

2008-10-20 arne

	* fix key steeling from host in cocoa code

2008-09-09 yvan

	* fix compilation when LIBPNG is used and win64

2008-09-24 arne

	* removed the CBitmap (void*) constructor
	* added CBitmap (CGImageRef) constructor
	* added CBitmap (GdiPlus::Bitmap*) constructor

2008-07-30 arne

	* calling invalid instead of setDirty when adding or removing a view from a view container
	* added #pragma comment( lib, "Gdiplus" ) when GDIPLUS is enabled

2008-07-29 arne

	* fix bug with setCurrent in COptionMenu and added method getCurrentIndex